# discord-mm

./: .clang-format  .gitignore  meson.build
src/: diva.cpp  diva.h  helpers.h  mod.cpp  shader_rgb.fxh  shader_yacbcr.fxh
subprojects/: discord.wrap  minhook.wrap
subprojects/packagefiles/: discord.patch
